# TaskManager

./: README.md  new.txt
.github/workflows/: cmake-multi-platform.yml
Cpp/: CMakeLists.txt  README.md
Cpp/resources/: TaskData.json  TaskManager.json
Cpp/src/: TaskDataModel.h  TaskDataStore.h  TaskManager.cpp  TaskManager.h  TaskManagerConfig.cpp  TaskManagerConfig.h  main.cpp
Cpp/src/conf/include/: TaskManagerConfig.h
Cpp/src/conf/src/: TaskManagerConfig.cpp
Cpp/src/datastore/include/: TaskDataHandler.h  TaskDataModel.h  TaskDataStore.h
Cpp/src/datastore/src/: TaskDataHandler.cpp  TaskDataStore.cpp
Cpp/src/utils/include/: JSONHelper.h
Cpp/src/utils/src/: JSONHelper.cpp
Cpp/test/: CMakeLists.txt  test_main.cpp
python/: taskmanager.py  todo_data.txt
